[package]
name = "rinha-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
sqlx = {version = "0.8.2", features = ["postgres", "runtime-tokio", "time", "uuid"]}
time = {version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"]}
tokio = {version = "1.40.0", features = ["full"]}
uuid = {version = "1.10.0", features = ["v7", "serde"]}
